erebor/unpackaged/main/default/objects/BeardQuality__c/BeardQuality__c.object-meta.xml
<CustomObject>
    <description>A record of the quality of an individual dwarf&#39;s beard.</description>
    <label>BeardQuality</label>
    <nameField>
        <displayFormat>BQ-{0000}</displayFormat>
        <label>BeardQuality ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BeardQualities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>