erebor/unpackaged/main/default/objects/BeardQuality__c/fields/BeardColour__c.field-meta.xml
<CustomField>
    <fullName>BeardColour__c</fullName>
    <description>Main colour of the beard.</description>
    <label>BeardColour</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auburn</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blond</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>