erebor/unpackaged/main/default/objects/BeardQuality__c/fields/BeardLength__c.field-meta.xml
<CustomField>
    <fullName>BeardLength__c</fullName>
    <description>Beard length (mm).</description>
    <label>BeardLength</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>