erebor/unpackaged/main/default/objects/BeardQuality__c/fields/InspectionDate__c.field-meta.xml
<CustomField>
    <fullName>InspectionDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date of inspection.</description>
    <label>InspectionDate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>