erebor/unpackaged/main/default/objects/BeardQuality__c/fields/InspectionLocation__c.field-meta.xml
<CustomField>
    <fullName>InspectionLocation__c</fullName>
    <description>Location of the inspection.</description>
    <label>InspectionLocation</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>